--- a/Views/Account/EditProfile.cshtml
+++ b/Views/Account/EditProfile.cshtml
@@ -6,7 +6,7 @@
              <section>      
                 <h1 class="entry-title"><span>Uppfæra mínar síður</span> </h1>
                 <hr/>
-                <form class="form-horizontal" asp-controller="Account" asp-action="EditProfile" method="POST">
+                <form class="form-horizontal" method="POST">
                     <div class="form-group">
                         <label class="control-label col-sm-3">Fornafn</label>
                         <div class="col-md-8 col-sm-9">
