--- a/Views/Order/ReviewOrder.cshtml
+++ b/Views/Order/ReviewOrder.cshtml
@@ -68,17 +68,14 @@
                 </tr>
                 </thead>
                 <tbody>
-                    @foreach (var book in @Model)
-                    {
                         <tr>
-                            <td>@book.Id</td>
-                            <td>@book.Image</td>
-                            <td>@book.Name</td>
-                            <td>@book.Copies</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
                             <td>Eitthvað hér???</td>
-                            <td>@book.Price</td>
+                            <td><sPrice</td>
                         </tr>
-                    }
                     <tr>
                         <td>   </td>
                         <td>   </td>
