--- a/Views/Book/Details.cshtml
+++ b/Views/Book/Details.cshtml
@@ -7,7 +7,9 @@
         </div>
         <div class="col-xs-5" style="border:0px solid gray">
             
-            <h3>@Model.Name</h3>    
+            <h3>@Model.Name</h3>  
+            <h4>Eftir @Model.Author</h4> 
+            <h5>@Model.Genre</h5> 
             <h5 style="color:#337ab7"> Einkunn fyrir @Model.Name: · <small style="color:#337ab7">@Model.Rating / 5</small></h5>
         
             <div class="section">
