--- a/Views/Order/ReviewOrder.cshtml
+++ b/Views/Order/ReviewOrder.cshtml
@@ -1,109 +1,98 @@
 @model BookCave.Models.ViewModels.ReviewOrderViewModel
 
-<div class="col-xs-12">
-    <div class="grid invoice">
-        <div class="grid-body">
-            <div class="invoice-title">
-                <br>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <h2>Yfirlit<br>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="grid invoice">
+                <div class="grid-body">
+                    <div class="invoice-title">
+                        <br>
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <h2>Yfirlit<br>
+                                <span class="small">order #1082</span></h2>
+                            </div>
+                        </div>
                     </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <address>
+                                <strong>Greiðandi:</strong><br>
+                                @Model.Checkout.PayerName<br>
+                                @Model.Checkout.PayerCountry @Model.Checkout.PayerZIP @Model.Checkout.PayerCity<br>
+                                @Model.Checkout.PayerAddress<br>
+                                <abbr title="Phone">S:</abbr> @Model.Checkout.PayerPhoneNumber
+                            </address>
+                        </div>
+                        <div class="col-xs-6 text-right">
+                            <address>
+                                <strong>Viðtakandi:</strong><br>
+                                @Model.Checkout.ReceiverName<br>
+                                @Model.Checkout.ReceiverCountry @Model.Checkout.ReceiverZIP @Model.Checkout.ReceiverCity<br>
+                                @Model.Checkout.ReceiverAddress<br>
+                                <abbr title="Phone">S:</abbr> @Model.Checkout.ReceiverPhoneNumber
+                            </address>
+                        </div>
+                    </div>
+                    <!--div class="container"-->
+                        <div class="row">
+                            <div class="table-responsive">
+                                <h1 class="entry-title"><span>Pöntunin mín</span></h1>
+                                <hr/>
+                                <table class="table table-bordered">
+                                    <thead>
+                                    <tr>
+                                        <th>#</th>
+                                        <th></th>
+                                        <th>Titill bókar</th>
+                                        <th>Magn</th>
+                                        <th>Dagsetning</th>
+                                        <th>Verð</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                            <tr>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td>Eitthvað hér???</td>
+                                                <td><sPrice</td>
+                                            </tr>
+                                        <tr>
+                                            <td>   </td>
+                                            <td>   </td>
+                                            <td>   </td>
+                                            <td>   </td>
+                                            <td><h5>Heildarverð</h5></td>
+                                            <td class="text-right"><h5><strong>6.340 kr.</strong></h5></td>
+                                        </tr>
+                                        <tr>
+                                            <td>   </td>
+                                            <td>   </td>
+                                            <td>   </td>
+                                            <td>   </td>
+                                            <td><h5>Sendingarkostnaður</h5></td>
+                                            <td class="text-right"><h5><strong>500 kr.</strong></h5></td>
+                                        </tr>
+                                        <tr>
+                                            <td>   </td>
+                                            <td>   </td>
+                                            <td>   </td>
+                                            <td>   </td>
+                                            <td><h3>Lokaupphæð</h3></td>
+                                            <td class="text-right"><h3><strong>6.840 kr.</strong></h3></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                <a asp-controller="Home" asp-action="Confirmation" class="btn btn-primary">Greiða fyrir pöntun</a>
+                                <a asp-controller="Home" asp-action="Cart" class="btn btn-primary">Til baka í körfu</a>
+                            </div>
+                        </div>
                 </div>
             </div>
-            <hr>
-            <div class="row">
-                <div class="col-xs-6">
-                    <address>
-                        <strong>Greiðandi:</strong><br>
-                        @Model.Checkout.PayerName<br>
-                        @Model.Checkout.PayerCountry, @Model.Checkout.PayerZIP @Model.Checkout.PayerCity<br>
-                        @Model.Checkout.PayerAddress<br>
-                        <abbr title="Phone">S:</abbr> @Model.Checkout.PayerPhoneNumber
-                    </address>
-                </div>
-                <div class="col-xs-6 text-right">
-                    <address>
-                        <strong>Viðtakandi:</strong><br>
-                        @Model.Checkout.ReceiverName<br>
-                        @Model.Checkout.ReceiverCountry, @Model.Checkout.ReceiverZIP @Model.Checkout.ReceiverCity<br>
-                        @Model.Checkout.ReceiverAddress<br>
-                        <abbr title="Phone">S:</abbr> @Model.Checkout.ReceiverPhoneNumber
-                    </address>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-6">
-                    <address>
-                        <strong>Payment Method:</strong><br>
-                        Visa ending **** 1234<br>
-                        h.elaine@gmail.com<br>
-                    </address>
-                </div>
-                <div class="col-xs-6 text-right">
-                    <address>
-                        <strong>Order Date:</strong><br>
-                        17/06/14
-                    </address>
-                </div>
-            </div>
+            <!--/div-->
         </div>
     </div>
 </div>
-
-<!--div class="container">
-	<div class="row">
-		<div class="table-responsive">
-            <h1 class="entry-title"><span>Pöntunin mín</span></h1>
-            <hr/>
-            <table class="table table-bordered">
-                <thead>
-                <tr>
-                    <th>#</th>
-                    <th></th>
-                    <th>Titill bókar</th>
-                    <th>Magn</th>
-                    <th>Dagsetning</th>
-                    <th>Verð</th>
-                </tr>
-                </thead>
-                <tbody>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td>Eitthvað hér???</td>
-                            <td><sPrice</td>
-                        </tr>
-                    <tr>
-                        <td>   </td>
-                        <td>   </td>
-                        <td>   </td>
-                        <td>   </td>
-                        <td><h5>Heildarverð</h5></td>
-                        <td class="text-right"><h5><strong>6.340 kr.</strong></h5></td>
-                    </tr>
-                    <tr>
-                        <td>   </td>
-                        <td>   </td>
-                        <td>   </td>
-                        <td>   </td>
-                        <td><h5>Sendingarkostnaður</h5></td>
-                        <td class="text-right"><h5><strong>500 kr.</strong></h5></td>
-                    </tr>
-                    <tr>
-                        <td>   </td>
-                        <td>   </td>
-                        <td>   </td>
-                        <td>   </td>
-                        <td><h3>Lokaupphæð</h3></td>
-                        <td class="text-right"><h3><strong>6.840 kr.</strong></h3></td>
-                    </tr>
-                </tbody>
-            </table>
-            <a asp-controller="Home" asp-action="Confirmation" class="btn btn-primary">Greiða fyrir pöntun</a>
-            <a asp-controller="Home" asp-action="Cart" class="btn btn-primary">Til baka í körfu</a>
-        </div>
-	</div>
-</div-->
