--- a/Views/Order/ReviewOrder.cshtml
+++ b/Views/Order/ReviewOrder.cshtml
@@ -10,7 +10,6 @@
                         <div class="row">
                             <div class="col-xs-12">
                                 <h2>Yfirlit<br>
-                                <span class="small">order #1082</span></h2>
                             </div>
                         </div>
                     </div>
@@ -35,64 +34,66 @@
                             </address>
                         </div>
                     </div>
-                    <!--div class="container"-->
-                        <div class="row">
-                            <div class="table-responsive">
-                                <h1 class="entry-title"><span>Pöntunin mín</span></h1>
-                                <hr/>
-                                <table class="table table-bordered">
-                                    <thead>
+                    <div class="row">
+                        <div class="table-responsive">
+                            <h1 class="entry-title"><span>Pöntunin mín</span></h1>
+                            <hr/>
+                            <table class="table table-bordered">
+                                <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th></th>
+                                    <th>Titill bókar</th>
+                                    <th>Magn</th>
+                                    <th>Einingarverð</th>
+                                    <th>Heildarverð</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var book in @Model.Cart.Books)
+                                    {
+                                        <tr>
+                                            <td><a class="thumbnail pull-left"> <img class="media-object" src="@book.Image" style="width: 72px; height: 72px;"></td>
+                                            <td>@book.Name</td>
+                                            <td>@book.Copies</td>
+                                            <td>@book.Author</td>
+                                            <td>@book.Price</td>
+                                            <td>@book.PriceSum</td>
+                                        </tr>
+                                    }
+
                                     <tr>
-                                        <th>#</th>
-                                        <th></th>
-                                        <th>Titill bókar</th>
-                                        <th>Magn</th>
-                                        <th>Dagsetning</th>
-                                        <th>Verð</th>
+                                        <td>   </td>
+                                        <td>   </td>
+                                        <td>   </td>
+                                        <td>   </td>
+                                        <td><h5>Heildarverð</h5></td>
+                                        <td class="text-right"><h5><strong>@Model.Cart.Total</strong></h5></td>
                                     </tr>
-                                    </thead>
-                                    <tbody>
-                                            <tr>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td>Eitthvað hér???</td>
-                                                <td><sPrice</td>
-                                            </tr>
-                                        <tr>
-                                            <td>   </td>
-                                            <td>   </td>
-                                            <td>   </td>
-                                            <td>   </td>
-                                            <td><h5>Heildarverð</h5></td>
-                                            <td class="text-right"><h5><strong>6.340 kr.</strong></h5></td>
-                                        </tr>
-                                        <tr>
-                                            <td>   </td>
-                                            <td>   </td>
-                                            <td>   </td>
-                                            <td>   </td>
-                                            <td><h5>Sendingarkostnaður</h5></td>
-                                            <td class="text-right"><h5><strong>500 kr.</strong></h5></td>
-                                        </tr>
-                                        <tr>
-                                            <td>   </td>
-                                            <td>   </td>
-                                            <td>   </td>
-                                            <td>   </td>
-                                            <td><h3>Lokaupphæð</h3></td>
-                                            <td class="text-right"><h3><strong>6.840 kr.</strong></h3></td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                                <a asp-controller="Home" asp-action="Confirmation" class="btn btn-primary">Greiða fyrir pöntun</a>
-                                <a asp-controller="Home" asp-action="Cart" class="btn btn-primary">Til baka í körfu</a>
-                            </div>
+                                    <tr>
+                                        <td>   </td>
+                                        <td>   </td>
+                                        <td>   </td>
+                                        <td>   </td>
+                                        <td><h5>Sendingarkostnaður</h5></td>
+                                        <td class="text-right"><h5><strong>500 kr.</strong></h5></td>
+                                    </tr>
+                                    <tr>
+                                        <td>   </td>
+                                        <td>   </td>
+                                        <td>   </td>
+                                        <td>   </td>
+                                        <td><h3>Lokaupphæð</h3></td>
+                                        <td class="text-right"><h3><strong>@Model.Cart.TotalPlus</strong></h3></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <a asp-controller="Order" asp-action="Confirmation" class="btn btn-primary">Greiða fyrir pöntun</a>
+                            <a asp-controller="Cart" asp-action="Index" class="btn btn-primary">Til baka í körfu</a>
                         </div>
+                    </div>
                 </div>
             </div>
-            <!--/div-->
         </div>
     </div>
 </div>
