--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -9,9 +9,11 @@
                 <form class="form-horizontal" asp-controller="Account" asp-action="Login">
                     <div class="form-group">
                         <input type="email" asp-for="Email" class="form-control" placeholder="Skrifaðu netfangið þitt"/>
+                        <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <input type="password" asp-for="Password" class="form-control" placeholder="Skrifaðu lykilorðið þitt"/>
+                        <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
                     <div class="checkbox">
                         <label>
