--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -13,7 +13,7 @@
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
                                 <input type="email" asp-for="Email" class="form-control" placeholder="Vinsamlegast skrifaðu netfangið þitt"/>
-                                <span asp-validation-for="Email"></span><br>
+                                <span asp-validation-for="Email" class="text-danger"></span><br>
                             </div>
                         </div>
                     </div>
@@ -21,14 +21,14 @@
                         <label class="control-label col-sm-3">Fornafn<span class="text-danger">*</span></label>
                         <div class="col-md-8 col-sm-9">
                             <input type="text" asp-for="FirstName" class="form-control" placeholder="Vinsamlegast skrifaðu fornafn hér"/>
-                            <span asp-validation-for="FirstName"></span><br>
+                            <span asp-validation-for="FirstName" class="text-danger"></span><br>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-sm-3">Eftirnafn<span class="text-danger">*</span></label>
                         <div class="col-md-8 col-sm-9">
                             <input type="text" asp-for="LastName" class="form-control" placeholder="Vinsamlegast skrifaðu eftirnafn hér"/>
-                            <span asp-validation-for="LastName"></span><br>
+                            <span asp-validation-for="LastName" class="text-danger"></span><br>
                         </div>
                     </div>
                     <div class="form-group">
@@ -43,28 +43,28 @@
                                 <option value="6">England</option>
                                 <option value="7">Bandaríkin</option>
                             </select>
-                            <span asp-validation-for="CountryId"></span><br>
+                            <span asp-validation-for="CountryId" class="text-danger"></span><br>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-sm-3">Borg/Bær<span class="text-danger">*</span></label>
                         <div class="col-md-8 col-sm-9">
                             <input type="text" asp-for="City" class="form-control" placeholder="Vinsamlegast skrifaðu heimilisfang hér"/>
-                            <span asp-validation-for="City"></span><br>
+                            <span asp-validation-for="City" class="text-danger"></span><br>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-sm-3">Póstnúmer<span class="text-danger">*</span></label>
                         <div class="col-md-8 col-sm-9">
                             <input type="text" asp-for="ZIP" class="form-control" placeholder="Vinsamlegast skrifaðu heimilisfang hér"/>
-                            <span asp-validation-for="ZIP"></span><br>
+                            <span asp-validation-for="ZIP" class="text-danger"></span><br>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-sm-3">Heimilisfang<span class="text-danger">*</span></label>
                         <div class="col-md-8 col-sm-9">
                             <input type="text" asp-for="Address" class="form-control" placeholder="Vinsamlegast skrifaðu heimilisfang hér"/>
-                            <span asp-validation-for="Address"></span><br>
+                            <span asp-validation-for="Address" class="text-danger"></span><br>
                         </div>
                     </div>
                     <div class="form-group">
@@ -72,8 +72,8 @@
                         <div class="col-md-5 col-sm-8">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                                <input type="password" asp-for="Password" class="form-control" placeholder="Veldu þér lykilorð (a.m.k. 8 stafir)"/>
-                                <span asp-validation-for="Password"></span><br>
+                                <input type="password" asp-for="Password" class="form-control" placeholder="a.m.k. 8 stafir, með hástaf og tölustaf"/>
+                                <span asp-validation-for="Password" class="text-danger"></span><br>
                             </div>   
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
                                 <input type="password" asp-for="Password" class="form-control" placeholder="Staðfestu lykilorðið"/>
-                                <span asp-validation-for="Password"></span><br>
+                                <span asp-validation-for="Password" class="text-danger"></span><br>
                             </div>  
                         </div>
                     </div>
@@ -94,7 +94,7 @@
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-phone"></i></span>
                                 <input type="text" asp-for="PhoneNumber" class="form-control" placeholder="Vinsamlegast skrifaðu símanúmer hér"/>
-                                <span asp-validation-for="PhoneNumber"></span><br>
+                                <span asp-validation-for="PhoneNumber" class="text-danger"></span><br>
                             </div>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
                         <div class="col-md-5 col-sm-8">
                             <div class="input-group"> <span class="input-group-addon" id="file_upload"><i class="glyphicon glyphicon-upload"></i></span>
                                 <input type="text" asp-for="Image" Class="form-control" placeholder="Vinsamlegast settu inn url-ið af myndinni hér"/>
-                                <span asp-validation-for="Image"></span><br>
+                                <span asp-validation-for="Image" class="text-danger"></span><br>
                             </div>
                         </div>
                     </div>
