--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -7,14 +7,20 @@
             <form method="POST">
                 <input type="hidden" asp-for="@Model.BookToDelete" value="0">
                 <input class="btn btn-danger" type="submit" value="Hreinsa úr körfu"/>
+                <div style="text-align:right;">
+                        <label for="discount">Ertu með afsláttarkóða? Sláðu hann inn hér:</label>
+                        <input asp-for="@Model.Discount" type="text" name="discount">
+                        <input type="submit" value="Endurhlaða">
+                </div>  
             </form>
+            </br>
 
             <table class="table table-hover">
                 <thead>
                     <tr>
                         <th>Vara</th>
                         <th>Fjöldi</th>
-                        <th class="text-center">Einingarerð</th>
+                        <th class="text-center">Einingarverð</th>
                         <th class="text-center">Heildarverð</th>
                         <th> </th>
                     </tr>
