--- a/Views/Order/Confirmation.cshtml
+++ b/Views/Order/Confirmation.cshtml
@@ -1,7 +1,8 @@
+@model BookCave.Models.ViewModels.ReviewOrderViewModel
 
 <div class="jumbotron text-xs-center">
   <h1 class="display-3">Pöntun þín hefur verið móttekin!</h1>
-  <p class="lead"><strong>Vinsamlegast skoðaðu póstinn þinn,</strong> greiðslustaðfesting hefur verið send á netfangið þitt.</p>
+  <p class="lead"><strong>Vinsamlegast skoðaðu póstinn þinn,</strong> greiðslustaðfesting hefur verið send á netfang greiðanda.</p>
   <hr/>
   <p class="lead">
     <a class="btn btn-primary btn-sm" asp-controller="Home" asp-action="Index" role="button">Aftur á forsíðu</a>
