--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -142,7 +142,7 @@
                 <p>If you are reading this, it is because your browser does not support the audio element.</p>
             </audio>
             <!--<p>Online Store Copyright</p> -->
-            <p>contactus&commat;bookcave.is</p>
+            <p>contactus.bookcave&commat;gmail.com</p>
             <p>sími: 581-2345</p>
             <p>kennitala: 210196-3079</p>
             <p>Fylgdu okkur!</p>
