review order service

--- a/Views/Order/ReviewOrder.cshtml
+++ b/Views/Order/ReviewOrder.cshtml
@@ -88,7 +88,7 @@
                                     </tr>
                                 </tbody>
                             </table>
-                            <a asp-controller="Order" asp-action="Confirmation" class="btn btn-primary">Greiða fyrir pöntun</a>
+                            <a asp-controller="Order" asp-action="Review" class="btn btn-primary">Greiða fyrir pöntun</a>
                             <a asp-controller="Cart" asp-action="Index" class="btn btn-primary">Til baka í körfu</a>
                         </div>
                     </div>
