laga hitt og þetta

--- a/Views/Book/Category.cshtml
+++ b/Views/Book/Category.cshtml
@@ -100,7 +100,7 @@
                                     <p class="price">@book.Price kr.</p>
                                 </div>
                                 <div class="col-md-6 col-sm-6">
-                                    <a asp-controller="Book" asp-action="Details" aps-route-id="@book.Id" class="btn btn-success right">Skoða bók</a>
+                                    <a asp-controller="Book" asp-action="Details" asp-route-id="@book.Id" class="btn btn-success right">Skoða bók</a>
                                 </div>
                             </div>
                         </span>
