--- a/Views/Book/AddRating.cshtml
+++ b/Views/Book/AddRating.cshtml
@@ -1,7 +1,7 @@
 @model BookCave.Models.ViewModels.CommentViewModel
 
 <div>
-    <h1>Einkunnargjöf fyrir @ViewBag.NameOfBook</h1>
+    <h1>Einkunnargjöf fyrir @ViewBag.Title</h1>
 </div>
 
 <div>
