--- a/Views/Book/Top10.cshtml
+++ b/Views/Book/Top10.cshtml
@@ -17,7 +17,7 @@
                                 <p class="price">@book.Price kr.</p>
                             </div>
                             <div class="col-md-6 col-sm-6">
-                                <a asp-controller="Home" asp-action="Cart" class="btn btn-success right" id="toptenCartBtn">Setja í körfu</a>
+                                <a asp-controller="Book" asp-action="Details" asp-route-id="@book.Id" class="btn btn-success right" id="toptenCartBtn">Skoða nánar</a>
                             </div>
                         </div>
                     </span>
