--- a/Views/Order/ReviewOrder.cshtml
+++ b/Views/Order/ReviewOrder.cshtml
@@ -86,8 +86,8 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                                <a asp-controller="Home" asp-action="Confirmation" class="btn btn-primary">Greiða fyrir pöntun</a>
-                                <a asp-controller="Home" asp-action="Cart" class="btn btn-primary">Til baka í körfu</a>
+                                <a asp-controller="Order" asp-action="Confirmation" class="btn btn-primary">Greiða fyrir pöntun</a>
+                                <a asp-controller="Book" asp-action="Index" class="btn btn-primary">Til baka í körfu</a>
                             </div>
                         </div>
                 </div>
