--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -98,7 +98,7 @@
                                         <a asp-controller="Book" asp-action="Details" asp-route-id="@Model.PopularBooks[i].Id"><img src=@Model.PopularBooks[i].Image class="img-responsive"></a>
                                         <div class="frontpage-caption">
                                             <h4>@Model.PopularBooks[i].Name</h4>
-                                            <p>@Model.PopularBooks[i].Rating</p>
+                                            <p>Einkunn: @Model.PopularBooks[i].Rating af 5</p>
                                         </div>
                                     </div>
                                 }
