--- a/Views/Account/EditProfile.cshtml
+++ b/Views/Account/EditProfile.cshtml
@@ -3,8 +3,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8">
-             <section>      
-                <h1 class="entry-title"><span>Uppfæra mínar síður</span> </h1>
+            <section>      
+                <h1 class="entry-title"><span>Uppfæra mínar síður</span></h1>
                 <hr/>
                 <form class="form-horizontal" method="POST">
                     <div class="form-group">
@@ -33,7 +33,6 @@
                                 <option value="6">England</option>
                                 <option value="7">Bandaríkin</option>
                             </select>
-                            <!--input type="text" asp-for="Address" class="form-control" placeholder="Vinsamlegast skrifaðu heimilisfang hér"/-->
                             <span asp-validation-for="CountryId"></span><br>
                         </div>
                     </div>
@@ -85,7 +84,9 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-xs-offset-3 col-md-8 col-sm-9"><span class="text-muted"><span class="label label-danger">Athugasemd:-</span> Með því að smella á Stofna aðgang, ert þú að samþykkja <a asp-area="" asp-controller="Home" asp-action="Terms">skilmála og skilyrði</a> Book Cave.</span> </div>
+                        <div class="col-xs-offset-3 col-md-8 col-sm-9">
+                            <span class="text-muted"><span class="label label-danger">Athugasemd:-</span> Með því að smella á Stofna aðgang, ert þú að samþykkja <a asp-area="" asp-controller="Home" asp-action="Terms">skilmála og skilyrði</a> Book Cave.</span> 
+                        </div>
                     </div>
                     <div class="form-group">
                         <div class="col-xs-offset-3 col-xs-10">
@@ -93,7 +94,7 @@
                         </div>
                     </div>
                 </form>
-             </section>
+            </section>
         </div>
     </div>
 </div>
