--- a/wwwroot/css/donate.css
+++ b/wwwroot/css/donate.css
@@ -1,23 +1,28 @@
-.carousel-inner img {
+.carousel-inner img
+{
     width: 100%;
     margin: auto;
 }
 
-#donateCarousel p {
+#donateCarousel p
+{
     background-color: rgba(128, 128, 128, 0.753);
 }
-#donateCarousel h3 {
+#donateCarousel h3
+{
     font-size: 32px;
     color: rgb(255, 102, 0);
     background-color: rgba(128, 128, 128, 0.753);
 }
 
-#title {
+#title
+{
     padding-top: 10px; 
     color: rgb(255, 145, 0);
     font-weight: bold;
 }
 
-.form-check {
+.form-check
+{
     padding-top: 14px;
 }
