--- a/wwwroot/css/login.css
+++ b/wwwroot/css/login.css
@@ -1,53 +1,74 @@
-
-
-#login-dp{
+#login-dp
+{
     min-width: 250px;
     padding: 14px 14px 0;
-    overflow:hidden;
-    background-color:white;
-    
+    overflow: hidden;
+    background-color: white;
 }
-#login-dp .help-block{
-    font-size:12px    
+
+#login-dp .help-block
+{
+    font-size: 12px;  
 }
-#login-dp .bottom{
-    background-color:rgba(255,255,255,.8);
-    border-top:1px solid #ddd;
-    clear:both;
-    padding:14px;
+
+#login-dp .bottom
+{
+    background-color: rgba(255,255,255,.8);
+    border-top: 1px solid #ddd;
+    clear: both;
+    padding: 14px;
 }
-#login-dp .social-buttons{
-    margin:12px 0    
+
+#login-dp .social-buttons
+{
+    margin: 12px 0;  
 }
-#login-dp .social-buttons a{
+
+#login-dp .social-buttons a
+{
     width: 49%;
 }
-#login-dp .form-group {
+
+#login-dp .form-group
+{
     margin-bottom: 10px;
 }
-.btn-fb{
+
+.btn-fb
+{
     color: #fff;
-    background-color:#3b5998;
+    background-color: #3b5998;
 }
-.btn-fb:hover{
+
+.btn-fb:hover
+{
     color: #fff;
-    background-color:#496ebc 
+    background-color: #496ebc 
 }
-.btn-tw{
+
+.btn-tw
+{
     color: #fff;
-    background-color:#55acee;
+    background-color: #55acee;
 }
-.btn-tw:hover{
+
+.btn-tw:hover
+{
     color: #fff;
-    background-color:#59b5fa;
+    background-color: #59b5fa;
 }
-@media(max-width:768px){
-    #login-dp{
+
+@media(max-width:768px)
+{
+    #login-dp
+    {
         background-color: inherit;
         color: #fff;
     }
-    #login-dp .bottom{
+
+    #login-dp .bottom
+    {
         background-color: inherit;
-        border-top:0 none;
+        border-top: 0 none;
     }
 }
